@@ -1,4 +1,4 @@
-### JVM参数
+### JVM参数类别
 
 
 
@@ -93,6 +93,21 @@ java -help
 -XX:MaxMetaspaceSize  元数据区最大值
 
 
+
+
+
+## GC日志相关参数
+
+- `-XX:+PrintGC` 输出GC日志
+- `-XX:+PrintGCDetails` 输出GC的详细日志
+- `-XX:+PrintGCTimeStamps` 输出GC的时间戳（以基准时间的形式）
+- `-XX:+PrintGCDateStamps` 输出GC的时间戳（以日期的形式，如 2017-09-04T21:53:59.234+0800）
+- `-XX:+PrintHeapAtGC` 在进行GC的前后打印出堆的信息
+- `-Xloggc:../logs/gc.log` 日志文件的输出路径
+
+
+
+## 一个典型的参数配置
 
 
 
